# varu-emb

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
cfg/: Cargo.toml
cfg/src/: cfg.rs  lib.rs
cross/: Cargo.toml
cross/proc/: Cargo.toml
cross/proc/src/: lib.rs
cross/proc/src/forward/: attributes.rs  mod.rs
cross/proc/src/hal/: mod.rs
cross/proc/src/hal/parsing/: hw.rs  mod.rs  peripheral.rs
cross/src/: gpio.rs  i2c.rs  io.rs  lib.rs  rs485.rs
cross/src/spi/: bus.rs  device.rs  mod.rs
devices/: Cargo.toml
devices/proc/: Cargo.toml
devices/proc/src/: lib.rs  register.rs
devices/src/: cluster.rs  i2c.rs  lib.rs  register.rs  spi.rs
executor/: Cargo.toml
executor/proc/: Cargo.toml
executor/proc/src/: execution.rs  lib.rs  task.rs
executor/src/: application.rs  lib.rs  spawner.rs  statistic.rs
executor/src/task/: mod.rs  stat.rs  state.rs  waker.rs
lockfree/: Cargo.toml
lockfree/src/: lib.rs  luqueue.rs
notifier/: Cargo.toml  README.md
notifier/proc/: Cargo.toml
notifier/proc/src/: lib.rs  proc_meta_parser.rs
notifier/proc/src/event/: mod.rs
notifier/proc/src/notifier/: mod.rs
notifier/proc/src/rpc/: mod.rs  parse.rs
notifier/proc/src/service/: data.rs  mod.rs
notifier/src/: calc.rs  event.rs  lib.rs  metadata.rs  service.rs  traits.rs
notifier/src/pubsub/: mixer.rs  mod.rs  subscriber.rs  traits.rs
notifier/src/rpc/: mod.rs  traits.rs
src/: lib.rs
utils/: Cargo.toml
utils/proc/: Cargo.toml
utils/proc/src/: cfg_derivable_item.rs  cfg_impl_block.rs  cfg_trait_bound.rs  cfg_type_alias.rs  lib.rs  multi_impl_block.rs
utils/src/: array_init.rs  assert.rs  execution.rs  futures.rs  lib.rs  macros.rs  newtype.rs  proc_meta_parser.rs
