[package]
name = "varuemb"
version = "0.2.0"
edition = "2021"
rust-version = "1.77"
authors = ["Volkalex28 <anan20000228@gmail.com>"]
description = """Toolchain for easy creation of asynchronous embedded applications on rust-lang"""
license = "MIT"
homepage = "https://github.com/Volkalex28/varu-emb#readme"
repository = "https://github.com/Volkalex28/varu-emb"
readme = "README.md"
categories = ["asynchronous", "data-structures", "embedded"]
keywords = ["channels", "embassy", "async", "notification", "rpc"]
include = [
    "/src",
    "/utils",
    "/notifier",
    "/README.md",
    "/LICENSE",
]

# [dependencies.varuemb-utils]
# path = "utils/"

# [dependencies.varuemb-notifier]
# path = "notifier/"

[dependencies]
varuemb-notifier = { path = "notifier" }
varuemb-utils    = { path = "utils" }

[workspace]
members = ["utils", "notifier"]
