[package]
name = "varuemb"

categories  = ["asynchronous", "data-structures", "embedded"]
description = """Toolchain for easy creation of asynchronous embedded applications on rust-lang"""
include     = ["/src", "/executor", "/lockfree", "/utils", "/notifier", "/README.md", "/LICENSE"]
keywords    = ["channels", "embassy", "async", "notification", "rpc"]
readme      = "README.md"

authors.workspace      = true
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[workspace.package]
authors      = ["Volkalex28 <anan20000228@gmail.com>"]
edition      = "2021"
homepage     = "https://github.com/Volkalex28/varu-emb#readme"
license      = "MIT"
repository   = "https://github.com/Volkalex28/varu-emb"
rust-version = "1.77"
version      = "0.3.1"

[workspace]
members = ["cross", "executor", "lockfree", "notifier", "utils", "build"]

[features]
default = ["cross", "devices", "executor", "utils"]
std     = ["cross/std", "executor/std"]

[dependencies]
cross    = { path = "cross", package = "varuemb-cross", optional = true }
devices  = { path = "devices", package = "varuemb-devices", optional = true }
executor = { path = "executor", package = "varuemb-executor", optional = true }
lockfree = { path = "lockfree", package = "varuemb-lockfree", optional = true }
notifier = { path = "notifier", package = "varuemb-notifier", optional = true }
utils    = { path = "utils", package = "varuemb-utils", optional = true }
