[package]
name = "varuemb-cfg"

categories  = ["toml", "config"]
description = """Load configuration for your crate from toml file"""
include     = ["/src"]
keywords    = ["toml", "config", "varuemb"]
readme      = "README.md"

authors.workspace      = true
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lib]
proc-macro = true

[dependencies]
enum-as-inner   = { version = "0.6" }
heck            = { version = "0.5" }
linked-hash-map = { version = "0.5" }
proc-macro2     = { version = "1.0" }
quote           = { version = "1.0" }
syn             = { version = "2.0", features = ["full", "extra-traits"] }
syn_derive      = { version = "0.2" }
toml            = { version = "0.8" }
