[package]
name = "varuemb-cross"

authors.workspace      = true
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[features]
std = ["embedded-io/std"]

[dependencies]
embedded-hal       = { version = "1.0.0" }
embedded-hal-async = { version = "1.0.0" }
embedded-io        = { version = "0.6.1" }
embedded-io-async  = { version = "0.6.1" }
enum-as-inner      = { version = "0.6" }
forward-traits     = { git = "https://github.com/Volkalex28/forward-traits.git", branch = "asynch" }
fugit              = { version = "0.3" }
proc               = { path = "proc", package = "varuemb-cross-proc" }
utils              = { path = "../utils", package = "varuemb-utils" }
