[package]
name = "varuemb-notifier"

categories = ["asynchronous", "data-structures", "embedded"]
description = """
    varuemb-notifier allows to create and configure synchronous and asynchronous pub-sub interface
    and asynchronous rpc interface for services in embedded applications
"""
include = ["/src", "/proc", "/README.md"]
keywords = ["channels", "embassy", "async", "notification", "rpc"]
readme = "README.md"

authors.workspace      = true
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[dependencies]
cfg-if = "1.0.0"
embassy-sync = { version = "0.6.0" }
embassy-time = { version = "0.3.0" }
futures-util = { version = "0.3.30", default-features = false, features = [
    "async-await",
    "async-await-macro",
] }
heapless = "0.8.0"
log = "0.4.21"
proc = { path = "proc", package = "varuemb-notifier-proc" }
varuemb-utils = { path = "../utils" }
