[package]
name = "varuemb-utils"

categories  = ["embedded"]
description = """Useful Embedded Utilities for Rust"""
include     = ["/src", "/proc"]
keywords    = ["compile", "embassy", "proc", "execution"]
readme      = "README.md"

authors.workspace      = true
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck        = { version = "1.14.0" }
const-assert    = { version = "1.0.1" }
const_format    = { version = "0.2.32" }
embassy-futures = { version = "0.1.1" }
paste           = { version = "1.0.14" }
# varuemb-utils-proc = { path = "proc" }
