[package]
name    = "varuemb-cross-proc"
version = "0.1.0"

authors.workspace      = true
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
cfg-if          = { version = "*" }
derive_builder  = { version = "0.20.0" }
heck            = { version = "0.5.0" }
linked-hash-map = { version = "0.5" }
proc-macro2     = { version = "1.0" }
quote           = { version = "1.0" }
syn             = { version = "2.0", features = ["full", "extra-traits"] }
syn_derive      = { version = "0.2" }
