[package]
name    = "varuemb-devices-proc"
version = "0.1.0"

authors.workspace      = true
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
heck            = { version = "0.5.0" }
linked-hash-map = { version = "0.5" }
proc-macro2     = { version = "1.0" }
quote           = { version = "1.0" }
syn             = { version = "2.0", features = ["full", "extra-traits"] }

[features]
testing = []
