[package]
name    = "varuemb-executor-proc"
version = "0.1.0"

authors.workspace      = true
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
heck        = "0.5.0"
proc-macro2 = "1.0"
quote       = "1.0"
syn         = { version = "1.0", features = ["full", "extra-traits"] }
