[package]
name = "varuemb-notifier-proc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heck = "0.4"
linked-hash-map = "0.5.6"
syn = { version = "2.0.16", features = ["full", "extra-traits" ] }
proc-macro2 = "1.0"
quote = "1.0"
varuemb-utils = { path = "../../utils" }

[lib]
proc-macro = true
