[package]
name = "varuemb-utils-proc"

authors.workspace      = true
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-as-inner = { version = "0.6" }
heck          = { version = "0.5" }
proc-macro2   = { version = "1.0" }
quote         = { version = "1.0" }
syn           = { version = "2.0", features = ["full"] }
syn_derive    = { version = "0.2" }
